# 2D-LiDAR-MOT

./: README.md
calibration/: CMakeLists.txt  package.xml
calibration/scripts/: lidar_to_cam_projection.py
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Detection2D.msg  Detection2DArray.msg  Track2D.msg  Track2DArray.msg
lidar_object_detection/: CMakeLists.txt  package.xml
lidar_object_detection/include/lidar_object_detection/: lidar_detection_vis_ros.hpp  lidar_object_detection_ros.hpp  lidar_preprocessing_ros.hpp
lidar_object_detection/include/lidar_object_detection/detection/: Detection2D.hpp
lidar_object_detection/launch/: lidar_object_detection.launch  lidar_object_tracking.launch
lidar_object_detection/src/: lidar_detection_vis_node.cpp  lidar_detection_vis_ros.cpp  lidar_detection_visualization_node.cpp  lidar_object_detection_node.cpp  lidar_object_detection_ros.cpp  lidar_preprocessing_node.cpp  lidar_preprocessing_ros.cpp
lidar_object_detection/src/detection/: Detection2D.cpp  Detection2D.hpp
lidar_object_tracking/: CMakeLists.txt  package.xml
lidar_object_tracking/include/lidar_object_tracking/: lidar_object_tracking_ros.hpp  lidar_track_vis_ros.hpp
lidar_object_tracking/include/lidar_object_tracking/tracking/: Track2D.hpp
lidar_object_tracking/launch/: lidar_object_tracking.launch
lidar_object_tracking/src/: lidar_object_detection_node.cpp  lidar_object_tracking_node.cpp  lidar_object_tracking_ros.cpp  lidar_track_vis_node.cpp  lidar_track_vis_ros.cpp  lidar_track_visualization_node.cpp
lidar_object_tracking/src/detection/: Detection2D.cpp  Detection2D.hpp
lidar_object_tracking/src/tracking/: Hungarian.cpp  Track2D.cpp  Track2D.hpp  kalman.cpp
lidar_object_tracking/src/tracking/hungarian-cpp/: Hungarian.cpp
lidar_object_tracking/src/tracking/kalman-cpp/: kalman.cpp  kalman.hpp
perception/: CMakeLists.txt  package.xml
perception/include/perception/: LShapeFitting.hpp  RectangleData.hpp
perception/launch/: perception.launch
perception/scripts/: camera_preprocessing.py  lidar_object_detection.py  lidar_preprocessing.py
perception/src/: LShapeFitting.cpp  RectangleData.cpp  lidar_object_detection.cpp  lidar_preprocessing.cpp
perception_launch/: package.xml
perception_launch/config/: lidar_perception_params.yaml
perception_launch/launch/: gazebo_metrics.launch  lidar_object_detection.launch  lidar_perception.launch  lidar_perception_bag.launch  lidar_perception_gazebo.launch
perception_launch/rviz/: lidar_object_tracking.rviz
perception_validate/: CMakeLists.txt  package.xml
perception_validate/include/perception_validate/: perception_metrics_ros.hpp
perception_validate/src/: perception_metrics_node.cpp  perception_metrics_ros.cpp
racecar_description/: package.xml
racecar_description/launch/: racecar_viz.launch
racecar_description/rviz/: racecar_viz.rviz
racecar_description/urdf/: inertial_macros.xacro  racecar_model.xacro
racecar_gazebo/: package.xml
racecar_gazebo/config/: controllers.yaml
racecar_gazebo/launch/: racecar_simple_scene.launch
racecar_gazebo/worlds/: simple_scene.world
